--- a/myApp/templates/addArticle.html
+++ b/myApp/templates/addArticle.html
@@ -1,41 +1,67 @@
-{% extends 'layout.html' %}
+{% extends 'layout_admin.html' %}
 {% block body %}
 <div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.7; color:black;">
 	<h1>Add Article</h1>
 	<form method='POST' action="">
 		<div class="form-group">
       <lable>
-        <span><h4>Title:</h4></span>
+        <span><h5>Title:</h5></span>
       <input type="text" name="title">
     </lable>
   </div>
       <div class="form-group">
       <lable>
-        <span><h4>Author:</h4></span>
+        <span><h5>Author:</h5></span>
       <input type="text" name="author">
     </lable>
   </div>
       <div class="form-group">
       <lable>
-        <span><h4>Category:</h4></span>
+        <span><h5>Category:</h5></span>
       <input type="text" name="category">
     </lable>
   </div>
   <div class="form-group">
       <lable>
-        <span><h4>Date:</h4></span>
+        <span><h5>Date:</h5></span>
       <input type="text" name="date">
     </lable>
   </div>
-      <div class="form-group">
+  <div class="form-group">
       <lable>
-        <span><h4>Summary:</h4></span>
+        <span><h5>Keyword 1:</h5></span>
+      <input type="text" name="k1">
+    </lable>
+    <lable>
+        <span><h5>Keyword 2:</h5></span>
+      <input type="text" name="k2">
+    </lable>
+    <lable>
+        <span><h5>Keyword 3:</h5></span>
+      <input type="text" name="k3">
+    </lable>
+  </div>
+  <div class="form-group">
+      <lable>
+        <span><h5>URL:</h5></span>
+      <input type="text" name="url">
+    </lable>
+  </div>
+  <div class="form-group">
+      <lable>
+        <span><h5>URL to Image:</h5></span>
+      <input type="text" name="urlimg">
+    </lable>
+  </div>
+  <div class="form-group">
+      <lable>
+        <span><h5>Summary:</h5></span>
       <textarea rows="40" cols="500" name="summary"></textarea>
     </lable>
   </div>
       <div class="form-group">
       <lable>
-        <span><h4>Description:</h4></span>
+        <span><h5>Description:</h5></span>
       <textarea rows="40" cols="500" name="description"></textarea>
     </lable>
 		</div>
