--- a/myApp/templates/includes/_navbar_admin.html
+++ b/myApp/templates/includes/_navbar_admin.html
@@ -30,8 +30,8 @@
       </ul>
     </div>
   </nav>
- <!--  <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p> -->
-     <p style="margin:0px; text-align: right;color: white;width: inline;background-color: black;margin-bottom: 10px"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
+<!--  <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p> -->
+     <p style="text-align: right;color: white;width: inline;background-color: black ;margin-bottom:10px"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
 
   <ul id="slide-out" class="sidenav" style="background-color: white;">
     <li><div class="user-view">
@@ -39,13 +39,14 @@
         <img src="static/map2.jpg">
       </div>
       <p style="font-size: 40px"><b>THE KHABAR</b></p>
+      <p style="font-size: 25px"><b>Hey, {{name}}!</b></p>
     </div></li>
-    <li><a href="/">Home</a></li>
+    <li><a href="/user_home">Home</a></li>
     
-    <li><a href="/register">Register</a></li>
-    <li><a href="/register_admin">Admin Register</a></li>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/login_admin">Admin Login</a></li>
+    <li><a href="/logout">Logout</a></li>
+    <!-- <li><a href="/change_user">Change Username</a></li> -->
+    <!-- <li><a href="/change">Change Password</a></li> -->
+    <li><a href="/add">Add Article</a></li>
     <li><a href="/search">Search</a></li>
     <li><a href="/credits">Credits</a></li>
  </ul>
